# cmake_test

./: CMakeLists.txt  lib_test.cc  lib_test.h  main.cc
lib/: lib_test2.cc  lib_test2.h
